# lumalla

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  flake.nix  init.lua  release.sh
.github/workflows/: build_and_check.yml  update_flake_lock.yaml
crates/lumalla_config/: Cargo.toml
crates/lumalla_config/src/: callback.rs  config_watcher.rs  dbus_lua.rs  external.rs  keymap.rs  lib.rs  output.rs  spawn.rs  window.rs  zone.rs
crates/lumalla_dbus/: Cargo.toml
crates/lumalla_dbus/src/: iface.rs  lib.rs  types.rs
crates/lumalla_display/: Cargo.toml
crates/lumalla_display/examples/: wl_shell_shm.rs
crates/lumalla_display/src/: lib.rs  seat.rs  shm.rs  surface.rs
crates/lumalla_display/src/protocols/: wayland.rs
crates/lumalla_input/: Cargo.toml  build.rs
crates/lumalla_input/src/: lib.rs  libinput.rs  restricted.rs  xkb.rs
crates/lumalla_ipc/: Cargo.toml
crates/lumalla_ipc/src/: lib.rs  proxy.rs  types.rs  window_manager.rs
crates/lumalla_ipc/xml/: org.lumalla.WindowManager.xml
crates/lumalla_rederer/: Cargo.toml
crates/lumalla_rederer/src/: lib.rs
crates/lumalla_renderer/: Cargo.toml  build.rs
crates/lumalla_renderer/src/: lib.rs
crates/lumalla_renderer/src/drm/: connector.rs  device.rs  dumb_buffer.rs  gbm.rs  mod.rs  modeset.rs  output.rs  sys.rs
crates/lumalla_renderer/src/vulkan/: clear.rs  command.rs  descriptor.rs  device.rs  dma_buf.rs  framebuffer.rs  image.rs  instance.rs  memory.rs  mod.rs  physical_device.rs  pipeline.rs  render_pass.rs  shaders.rs  swapchain.rs  sync.rs  upload.rs
crates/lumalla_seat/: Cargo.toml  build.rs  wrapper.h
crates/lumalla_seat/src/: lib.rs  libseat.rs  libseat_crate.rs
crates/lumalla_shared/: CHANGELOG.md  Cargo.toml  build.rs
crates/lumalla_shared/src/: args.rs  comms.rs  config_message.rs  dbus_message.rs  display_message.rs  drm.rs  input_message.rs  keymap_memfd.rs  lib.rs  main_message.rs  message_runner.rs  output.rs  renderer_message.rs  seat_message.rs  udev.rs  window_rule.rs  zone.rs
crates/lumalla_wayland_protocol/: Cargo.toml
crates/lumalla_wayland_protocol/src/: buffer.rs  client.rs  header.rs  lib.rs  registry.rs
crates/lumalla_wayland_protocol/src/protocols/: mod.rs  wayland.rs
crates/lumalla_wayland_protocol_macros/: Cargo.toml
crates/lumalla_wayland_protocol_macros/src/: lib.rs  schema.rs
crates/wayland_protocol/: Cargo.toml
crates/wayland_protocol_macros/: Cargo.toml
src/: app.rs  main.rs  os_signal.rs
