[package]
name = "lumalla"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/lumalla_shared",
    "crates/wayland_protocol",
    "crates/wayland_protocol_macros",
]

[workspace.dependencies]
calloop = { version = "0.14.0", features = ["executor"] }
log = { version = "0.4.27", features = [
    "kv",
    "max_level_trace",
    "release_max_level_debug",
] }
env_logger = { version = "0.11.8", features = ["kv"] }
anyhow = "1.0.72"

[dependencies]
lumalla_shared = { path = "./crates/lumalla_shared" }
env_logger = { workspace = true }
log = { workspace = true }
