[package]
name = "lumalla"
version = "0.1.0"
edition = "2024"
description = "Window manager focused on configurability"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lumalla/lumalla"
include = ["src/**/*", "LICENSE-*", "README.md"]

[workspace]
members = [
    "crates/lumalla_config",
    "crates/lumalla_display",
    "crates/lumalla_input",
    "crates/lumalla_rederer",
    "crates/lumalla_shared",
    "crates/lumalla_wayland_protocol",
    "crates/lumalla_wayland_protocol_macros",
]

[workspace.dependencies]
mio = { version = "1", features = ["os-poll"] }
log = { version = "0.4.27", features = [
    "max_level_trace",
    "release_max_level_warn",
] }
env_logger = { version = "0.11.8", features = ["kv"] }
anyhow = "1.0.72"
mlua = { version = "0.11.0", features = ["lua54", "vendored"] }
xdg = "2.5"
notify = "8.0"
signal-hook = "0.3"
nix = "0.30.1"

[dependencies]
lumalla_config = { path = "./crates/lumalla_config", version = "^0.1.0" }
lumalla_display = { path = "./crates/lumalla_display", version = "^0.1.0" }
lumalla_input = { path = "./crates/lumalla_input", version = "^0.1.0" }
lumalla_rederer = { path = "./crates/lumalla_rederer", version = "^0.1.0" }
lumalla_shared = { path = "./crates/lumalla_shared", version = "^0.1.0" }
env_logger = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
mio = { workspace = true }
signal-hook = { workspace = true }
