[package]
name = "lumalla_renderer"
version = "0.1.0"
edition = "2024"
description = "Renderer handling library for lumalla"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lumalla/lumalla"
include = ["src/**/*", "LICENSE-*"]

[dependencies]
lumalla_shared = { path = "../lumalla_shared" }
anyhow = { workspace = true }
mio = { workspace = true }
log = { workspace = true }
ash = "0.38"
gpu-allocator = "0.28"
drm = "0.14"
drm-ffi = "0.9"
gbm = { version = "0.16", default-features = false, features = ["drm-support"] }
rustix = { version = "1", features = ["fs", "event"] }
