[package]
name = "lumalla_shared"
version = "0.1.0"
edition = "2024"
description = "Shared library for lumalla"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lumalla/lumalla"
include = ["src/**/*", "LICENSE-*"]

[dependencies]
anyhow = { workspace = true }
calloop = { workspace = true }
log = { workspace = true }
