[package]
name = "lumalla_wayland_protocol"
version = "0.1.0"
edition = "2024"
description = "Wayland protocol implementation for lumalla"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lumalla/lumalla"
include = ["src/**/*", "LICENSE-*"]

[dependencies]
mio = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
lumalla_wayland_protocol_macros = { path = "../lumalla_wayland_protocol_macros" }
nix = { workspace = true }
