[package]
name = "lumalla_wayland_protocol_macros"
version = "0.1.0"
edition = "2024"
description = "Macros that generate wayland protocol code for lumalla"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lumalla/lumalla"
include = ["src/**/*", "LICENSE-*"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.38", features = ["serialize", "overlapped-lists"] }
anyhow = { workspace = true }
